# realtime-hpe-application

./: .gitignore  check_camera.py  ground_truth_reference.ipynb  ground_truth_reference.py  image_segmentation.py  landmarks_output.py  livestream_pose.ipynb  livestream_pose.py  livestream_pose_refined.py  main.py  main_refined.py  outline.py  pose_utils.py  pyproject.toml  requirements.txt  yoga_pose_scoring.ipynb  yoga_pose_scoring_video.ipynb
.github/workflows/: prettier.yml
.ipynb_checkpoints/: livestream_pose-checkpoint.ipynb
backend/: main.py  pose_scoring.py
pose-estimation-app/: .prettierignore  index.html  package-lock.json  package.json
pose-estimation-app/.husky/: pre-commit
pose-estimation-app/src/: App.jsx
pose-estimation-app/src/components/: CameraView.jsx  FeedbackPanel.jsx  Header.jsx  index.js
pose-estimation-app/src/lib/: mountain.json  plank.json  plank_2.json  tree.json  tree_2.json  triangle.json  triangle_2.json  warrior1.json  warrior2.json
pose-estimation-app/src/pages/: HomePage.jsx  LeaderboardPage.jsx  LoginPage.jsx  SessionHistoryPage.jsx  SetPage.jsx  SignupPage.jsx  TrackingPage.jsx  UploadVideoPage.jsx  index.js
pose-estimation-app/src/utils/: drawSkeleton.js  poseClassification.js  poseMatching.js  poseUtils.js  visionTaskConfig.js
reference/: ground_truth_tree.json  ground_truth_triangle.json  ground_truth_warrior1.json  ground_truth_warrior2.json
streamlit/: app.py
yoga_landmarks/: tree_2.json
