[project]
name = "fyp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.31",
    "numpy>=2.0.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.0.0,<3",
    "pillow>=12.1.0",
    "streamlit>=1.42.0",
    "altair>=5.0.0,<6",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
